[gd_scene load_steps=50 format=3 uid="uid://dyhynxb1s50md"]

[ext_resource type="Script" path="res://Level_Scenes_objects/Enemys/enemy_script/Enemy1.gd" id="1_ka7x5"]
[ext_resource type="Texture2D" uid="uid://b3c3thp10eys0" path="res://Level_Scenes_objects/Enemys/Enemy_Assests/goblin/goblin_idle_spritesheet.png" id="2_nth5g"]
[ext_resource type="Texture2D" uid="uid://b1n512ssb4yek" path="res://Level_Scenes_objects/Enemys/Enemy_Assests/goblin/goblin_run_spritesheet.png" id="3_y68vj"]
[ext_resource type="Texture2D" uid="uid://b2h2f8ik3llan" path="res://Other_Game_Assests/effects (new)/enemy_afterdead_explosion_anim_f0.png" id="4_ytni7"]
[ext_resource type="Texture2D" uid="uid://bhxk8n8pc0aoo" path="res://Other_Game_Assests/effects (new)/enemy_afterdead_explosion_anim_f1.png" id="5_qggna"]
[ext_resource type="Texture2D" uid="uid://cltpkp3mnn35n" path="res://Other_Game_Assests/effects (new)/enemy_afterdead_explosion_anim_f2.png" id="6_ig41s"]
[ext_resource type="Texture2D" uid="uid://c231e18j0lh7w" path="res://Other_Game_Assests/effects (new)/enemy_afterdead_explosion_anim_f3.png" id="7_eg0uf"]
[ext_resource type="Texture2D" uid="uid://dua5x76hysn7g" path="res://Other_Game_Assests/props_itens/bomb_anim_spritesheet.png" id="8_uxyel"]
[ext_resource type="Texture2D" uid="uid://bt6g1qabklnbb" path="res://Other_Game_Assests/effects (new)/explosion_anim_f0.png" id="9_miyp6"]
[ext_resource type="Texture2D" uid="uid://bgwhb4hqhxi7m" path="res://Other_Game_Assests/effects (new)/explosion_anim_f1.png" id="10_6db0b"]
[ext_resource type="Texture2D" uid="uid://mu8fod571ix7" path="res://Other_Game_Assests/effects (new)/explosion_anim_f2.png" id="11_0bvy7"]
[ext_resource type="AudioStream" uid="uid://cn8jf46brijl" path="res://Sounds/Sounds_Assest/SFX/goblin-death-6729.mp3" id="12_b0fxp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kd1ww"]
radius = 93.3815

[sub_resource type="AtlasTexture" id="AtlasTexture_0cc5q"]
atlas = ExtResource("2_nth5g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acf8k"]
atlas = ExtResource("2_nth5g")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuapi"]
atlas = ExtResource("2_nth5g")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbna7"]
atlas = ExtResource("2_nth5g")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a6ty"]
atlas = ExtResource("2_nth5g")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa4gv"]
atlas = ExtResource("2_nth5g")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywmth"]
atlas = ExtResource("3_y68vj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly0kb"]
atlas = ExtResource("3_y68vj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig8od"]
atlas = ExtResource("3_y68vj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_06su5"]
atlas = ExtResource("3_y68vj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrxkq"]
atlas = ExtResource("3_y68vj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj3sr"]
atlas = ExtResource("3_y68vj")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u4e7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cc5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acf8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuapi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbna7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a6ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa4gv")
}],
"loop": true,
"name": &"Goblin idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywmth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly0kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig8od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06su5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrxkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj3sr")
}, {
"duration": 1.0,
"texture": ExtResource("4_ytni7")
}, {
"duration": 1.0,
"texture": ExtResource("5_qggna")
}, {
"duration": 1.0,
"texture": ExtResource("6_ig41s")
}, {
"duration": 1.0,
"texture": ExtResource("7_eg0uf")
}],
"loop": true,
"name": &"Goblin_run",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wg61f"]
atlas = ExtResource("8_uxyel")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhq7a"]
atlas = ExtResource("8_uxyel")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtsuw"]
atlas = ExtResource("8_uxyel")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wirax"]
atlas = ExtResource("8_uxyel")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_joiyp"]
atlas = ExtResource("8_uxyel")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7gxh"]
atlas = ExtResource("8_uxyel")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_is28a"]
atlas = ExtResource("8_uxyel")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iojan"]
atlas = ExtResource("8_uxyel")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i80hd"]
atlas = ExtResource("8_uxyel")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dxhq"]
atlas = ExtResource("8_uxyel")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0878j"]
atlas = ExtResource("8_uxyel")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw5xd"]
atlas = ExtResource("8_uxyel")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60cul"]
atlas = ExtResource("8_uxyel")
region = Rect2(128, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ei5s1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg61f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhq7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtsuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wirax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joiyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7gxh")
}, {
"duration": 1.0,
"texture": ExtResource("9_miyp6")
}, {
"duration": 1.0,
"texture": ExtResource("10_6db0b")
}, {
"duration": 1.0,
"texture": ExtResource("11_0bvy7")
}],
"loop": true,
"name": &"blow_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_is28a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iojan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i80hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dxhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0878j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw5xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60cul")
}],
"loop": true,
"name": &"bomb",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_nolty"]
resource_name = "Goblin_run_blowup_2"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Goblin_animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Goblin_run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Goblin_animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Goblin_animation/Bomb:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"bomb"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Goblin_animation/Bomb:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 2, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Goblin_animation/Bomb:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mfdpe"]
resource_name = "Goblin_run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Goblin_animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Goblin_run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Goblin_animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Goblin_animation/Bomb:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"blow_up"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Goblin_animation/Bomb:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Goblin_animation/Bomb:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(2, 2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Goblin_animation/Bomb:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hxhxy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Goblin_animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Goblin idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Goblin_animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Goblin_animation/Bomb:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"bomb"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Goblin_animation/Bomb:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Goblin_animation/Bomb:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Goblin_animation/Bomb:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i5thv"]
resource_name = "death"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Goblin_animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Goblin_run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Goblin_animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Goblin_animation/Bomb:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ikgt5"]
resource_name = "goblin_idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Goblin_animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Goblin idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Goblin_animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Goblin_animation/Bomb:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"bomb"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Goblin_animation/Bomb:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Goblin_animation/Bomb:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0fhc"]
_data = {
"Goblin_run": SubResource("Animation_nolty"),
"Goblin_run_blowup": SubResource("Animation_mfdpe"),
"RESET": SubResource("Animation_hxhxy"),
"death": SubResource("Animation_i5thv"),
"goblin_idle": SubResource("Animation_ikgt5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2iwn4"]
size = Vector2(20, 9)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o6p0x"]
radius = 8.0
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhyms"]
size = Vector2(53, 24)

[node name="Goblin" type="CharacterBody2D"]
position = Vector2(6.66667, 0)
script = ExtResource("1_ka7x5")

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(-16, 0)
target_position = Vector2(0.33333, 41)

[node name="detectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(-3, -1)
shape = SubResource("CircleShape2D_kd1ww")

[node name="Goblin_animation" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u4e7y")
animation = &"Goblin idle"

[node name="Bomb" type="AnimatedSprite2D" parent="Goblin_animation"]
visible = false
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_ei5s1")
animation = &"bomb"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d0fhc")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(16, 0)
target_position = Vector2(0.33333, 41)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.33333, 11.5)
shape = SubResource("RectangleShape2D_2iwn4")

[node name="SwordKill" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordKill"]
position = Vector2(1.33333, -6)
shape = SubResource("CapsuleShape2D_o6p0x")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(2, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.83333, -6)
shape = SubResource("RectangleShape2D_fhyms")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_b0fxp")
bus = &"SFX"

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="area_entered" from="SwordKill" to="." method="_on_sword_kill_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
